force-app/main/default/objects/Escalation_Review__c/Escalation_Review__c.object-meta.xml
<CustomObject>
    <label>Escalation Review</label>
    <nameField>
        <displayFormat>ESC-{0000}</displayFormat>
        <label>Escalation Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalation Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>