force-app/main/default/objects/Escalation_Review__c/fields/Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adverse Event</label>
    <referenceTo>Adverse_Event__c</referenceTo>
    <relationshipLabel>Escalation Reviews</relationshipLabel>
    <relationshipName>Escalation_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>