force-app/main/default/objects/Escalation_Review__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Escalation Reviews</relationshipLabel>
    <relationshipName>Escalation_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>